# DIgital-Club

./: .gitignore  DIGITAL_ID_IMPLEMENTATION.md  DIGITAL_ID_REDESIGN_COMPLETE.md  Dockerfile  ID_CARD_IMPROVEMENTS.md  ID_CARD_PREMIUM_UPGRADES.md  ID_CARD_PREVIEW.md  LICENSE  README.md  REWARDS_MEMBERSHIP_SYSTEM.md  config.py  docker-compose.yml  gunicorn_conf.py  main.py  migrate_password_hash.py  migrate_rewards_system.py  pyproject.toml
app/: __init__.py  id_generator.py  models.py  sms.py  utils.py
app/routes/: admin.py  auth.py  main.py  member.py  verification.py
app/static/css/: admin.css  style.css
app/static/js/: main.js
app/templates/: about.html  alumni.html  base.html  baseAdmin.html  blog_post.html  blogs.html  contact.html  events.html  gallery.html  index.html  leaders.html  member_public_profile.html  members.html  news.html  projects.html  rsvp_form.html  rsvp_status.html  students.html  topics.html  verification.html
instance/: digital_club.db  digital_club_01.db
migrations/versions/: b033ca5044ab_.py  c20260209151049_competitions.py  c20260209165003_competition_enrollment.py  c20260209193000_sessions.py  c20260209195500_teams.py  c20260212110000_user_active_account.py  c20260212123000_event_target_audience.py  c20260212130000_rsvp_attendee_fields.py  c20260212154000_daily_active_users.py  c20260212173000_competition_notice_fields.py
scripts/fixes/: fix_rsvp_table.py
scripts/migration/: migrate_digital_ids.py  migrate_financial_system.py  migrate_password_hash_column.py  migrate_rsvp.py  migrate_super_admin.py
tests/: test_rsvp.py
(+88 files in other folders)
